kubernetes/apps/infrastructure/longhorn/components/ingress/ingress-dummy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-dummy
  namespace: longhorn-system
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - longhorn.example.com
      secretName: longhorn-dummy-tls
  rules:
    - host: longhorn.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-ui
                port:
                  number: 80
