kubernetes/apps/infrastructure/longhorn/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-aritrosinha"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    link.argocd.argoproj.io/external-link: "https://longhorn.ruth.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - longhorn.ruth.aritrosinha.dpdns.org
      secretName: longhorn-tls
  rules:
    - host: longhorn.ruth.aritrosinha.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
